added changing color elem

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <div class="tumbler__arrow_left"></div>
             <p class="tumbpler__paragraph"></p>
         </div>
+        <div class="tumbler_anim"></div>
     </div>
 </body>
 
