made one side animation

--- a/index.html
+++ b/index.html
@@ -10,17 +10,19 @@
 </head>
 
 <body>
-    <div class="tumbler">
+    <label class="tumbler">
         <div class="tumbler__side">
             <div class="tumbler__arrow_rigth"></div>
-            <p class="tumbpler__paragraph"></p>
+            <p class="tumbpler__paragraph">future</p>
         </div>
         <div class="tumbler__side">
             <div class="tumbler__arrow_left"></div>
-            <p class="tumbpler__paragraph"></p>
+            <p class="tumbpler__paragraph">past</p>
         </div>
-        <div class="tumbler_anim"></div>
-    </div>
+        <input type="checkbox" class="tumbler__checkbox"></input>
+        <div type="checkbox" class="tumbler__anim"></div>
+        
+    </label>
 </body>
 
 </html>
