--- a/old/index.html
+++ b/old/index.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <title>Document</title>
 </head>
+
 <body>
     <label class="tumbler">
-        <input class="tumbler__input" type="text">
-        <input class="tumbler__input" type="text">
-        <div class="tumbler__anim"></div>
-
+        <input type="checkbox" class="tumbler__checkbox"></input>
         <div class="tumbler__side">
             <div class="tumbler__arrow_rigth"></div>
             <p class="tumbpler__paragraph">future</p>
@@ -21,6 +20,10 @@
             <div class="tumbler__arrow_left"></div>
             <p class="tumbpler__paragraph">past</p>
         </div>
+        
+        <div type="checkbox" class="tumbler__anim"></div>
+        
     </label>
 </body>
+
 </html>
