--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,10 +8,13 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <label class="tumbler">
-        <input class="tumbler__input" type="text">
-        <input class="tumbler__input" type="text">
+    <form class="tumbler">
+        <input class="tumbler__input" type="radio" id="1" name="field">
+        <label for="1"></label>
+        <input class="tumbler__input" type="radio" id="2" name="field">
+        <label for="2"></label>
         <div class="tumbler__anim"></div>
 
         <div class="tumbler__side">
@@ -21,6 +25,9 @@
             <div class="tumbler__arrow_left"></div>
             <p class="tumbpler__paragraph">past</p>
         </div>
-    </label>
+
+
+    </form>
 </body>
+
 </html>
