--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/scaled/scaled.css">
 </head>
 
 <body>
@@ -24,9 +25,44 @@
             <p class="tumbpler__paragraph">future</p>
             <div class="tumbler__arrow tumbler__arrow_direction_right"></div>
         </div>
-
-
     </form>
+
+
+
+    <form class="tumbler tumbler_type_scaled">
+        <input class="tumbler__input" type="radio" name="field" checked>
+        <input class="tumbler__input" type="radio" name="field">
+        <div class="tumbler__anim tumbler__anim_type_scale"></div>
+
+        <div class="tumbler__side">
+            <div class="tumbler__arrow tumbler__arrow_direction_left tumbler__arrow_type_scaled"></div>
+            <p class="tumbpler__paragraph tumbpler__paragraph_type_scaled">past</p>
+        </div>
+
+        <div class="tumbler__side tumbler__side_type_scaled">
+            <p class="tumbpler__paragraph tumbpler__paragraph_type_scaled tumbler__arrow_type_scaled">future</p>
+            <div class="tumbler__arrow tumbler__arrow_direction_right tumbler__arrow_type_scaled"></div>
+        </div>
+    </form>
+
+
+
+    <form class="tumbler">
+        <input class="tumbler__input" type="radio" name="field" checked>
+        <input class="tumbler__input" type="radio" name="field">
+        <div class="tumbler__anim"></div>
+
+        <div class="tumbler__side">
+            <div class="tumbler__arrow tumbler__arrow_direction_left"></div>
+            <p class="tumbpler__paragraph">past</p>
+        </div>
+
+        <div class="tumbler__side">
+            <p class="tumbpler__paragraph">future</p>
+            <div class="tumbler__arrow tumbler__arrow_direction_right"></div>
+        </div>
+    </form>
+
 </body>
 
 </html>
