--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/scaled/scaled.css">
+    <link rel="stylesheet" href="styles/neon/neon.css">
 </head>
 
 <body>
@@ -47,18 +48,18 @@
 
 
 
-    <form class="tumbler">
+    <form class="tumbler tumbler_type_neon">
         <input class="tumbler__input" type="radio" name="field" checked>
         <input class="tumbler__input" type="radio" name="field">
-        <div class="tumbler__anim"></div>
+        <div class="tumbler__anim tumbler__anim_type_neon"></div>
 
         <div class="tumbler__side">
             <div class="tumbler__arrow tumbler__arrow_direction_left"></div>
-            <p class="tumbpler__paragraph">past</p>
+            <p class="tumbpler__paragraph tumbpler__paragraph_type_neon">past</p>
         </div>
 
         <div class="tumbler__side">
-            <p class="tumbpler__paragraph">future</p>
+            <p class="tumbpler__paragraph tumbpler__paragraph_type_neon">future</p>
             <div class="tumbler__arrow tumbler__arrow_direction_right"></div>
         </div>
     </form>
