--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="styles/style.css">
-    <link rel="stylesheet" href="styles/scaled/scaled.css">
-    <link rel="stylesheet" href="styles/neon/neon.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
@@ -19,11 +17,11 @@
 
         <div class="tumbler__side">
             <div class="tumbler__arrow tumbler__arrow_direction_left"></div>
-            <p class="tumbpler__paragraph">past</p>
+            <p class="tumbler__paragraph tumbler__paragraph_left">past</p>
         </div>
 
         <div class="tumbler__side">
-            <p class="tumbpler__paragraph">future</p>
+            <p class="tumbler__paragraph tumbler__paragraph_right">future</p>
             <div class="tumbler__arrow tumbler__arrow_direction_right"></div>
         </div>
     </form>
@@ -35,13 +33,13 @@
         <input class="tumbler__input" type="radio" name="field">
         <div class="tumbler__anim tumbler__anim_type_scale"></div>
 
-        <div class="tumbler__side">
+        <div class="tumbler__side tumbler__side_type_scaled">
             <div class="tumbler__arrow tumbler__arrow_direction_left tumbler__arrow_type_scaled"></div>
-            <p class="tumbpler__paragraph tumbpler__paragraph_type_scaled">past</p>
+            <p class="tumbler__paragraph tumbler__paragraph_left">past</p>
         </div>
 
         <div class="tumbler__side tumbler__side_type_scaled">
-            <p class="tumbpler__paragraph tumbpler__paragraph_type_scaled tumbler__arrow_type_scaled">future</p>
+            <p class="tumbler__paragraph tumbler__paragraph_right">future</p>
             <div class="tumbler__arrow tumbler__arrow_direction_right tumbler__arrow_type_scaled"></div>
         </div>
     </form>
@@ -53,13 +51,13 @@
         <input class="tumbler__input" type="radio" name="field">
         <div class="tumbler__anim tumbler__anim_type_neon"></div>
 
-        <div class="tumbler__side">
+        <div class="tumbler__side tumbler__side_type_neon">
             <div class="tumbler__arrow tumbler__arrow_direction_left"></div>
-            <p class="tumbpler__paragraph tumbpler__paragraph_type_neon">past</p>
+            <p class="tumbler__paragraph tumbler__paragraph_left">past</p>
         </div>
 
-        <div class="tumbler__side">
-            <p class="tumbpler__paragraph tumbpler__paragraph_type_neon">future</p>
+        <div class="tumbler__side tumbler__side_type_neon">
+            <p class="tumbler__paragraph tumbler__paragraph_right">future</p>
             <div class="tumbler__arrow tumbler__arrow_direction_right"></div>
         </div>
     </form>
