--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8">
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="index.css">
 </head>
 
-<body>
+<body> 
     <div class="container">
         <h1 class="container__heading">Тестовое задание по макету Buttonchik</h1>
         <p class="container__text">Представляю Вам три варианта тумблера с различными цветовыми решениями, а так же
@@ -21,10 +21,14 @@
             В зависимости от заданного размера кнопки будет меняться ее содержимое, данный подход облегчит написание
             адаптивной верстки.
             <br> Что не получилось: <br>
-            Менять размер стороны кнопки в зависимости от содержимого. В течении выполнения задания я пришла к выводу,
-            что
-            без использования js я не смогу реализовать плавную анимацию, при этом сохранив "резиновость" кнопки.
+            Менять размер стороны кнопки в зависимости от содержимого. Без использования js я не смогу реализовать плавную анимацию, при этом сохранив "резиновость" кнопки.
             Я решила поставить анимацию в приоритет и размеры сторон кнопки задала в процентах.
+            <br> Что можно сделать лучше: <br>
+            &bull; При минимальном размере кнопки, когда отображается только стрелочка, можно изменить размеры сторон кнопки так, чтобы они были равны. 
+            Это могло бы решить проблему разной ширины сторон кнопки, однако является "костылем". <br>
+            Изменение высоты для каждой кнопки отдельно. На данный момент отдельно можно поменять только ширину, высота изменяется сразу для всех кнопок.
+            <br>
+            &bull; Настроить webpack для компиляции и оптимизации css.
         </p>
         <div class="container__tumblers">
 
